--- a/src/NBT.Infrastructure/NBT.Infrastructure.csproj
+++ b/src/NBT.Infrastructure/NBT.Infrastructure.csproj
@@ -4,6 +4,12 @@
     <ProjectReference Include="..\NBT.Application\NBT.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
