--- a/src/NBT.WebUI/NBT.WebUI.csproj
+++ b/src/NBT.WebUI/NBT.WebUI.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\NBT.Application\NBT.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
