Configure database for SQL Server 2019 production deployment
- Updated connection strings for local SQL Server (04BF1B900A9D)
- Fixed ApplicationDbContextFactory to read from appsettings
- Created NBTWebsite_Dev database and applied all migrations
- Seeded initial data (3 pages, 3 announcements, 5 roles, 1 admin user, 5 resources)
- Added comprehensive production deployment documentation
- All 12 tables created successfully (ContentPages, Users, Announcements, etc.)
- Fully compatible with SQL Server 2019 and SQL Server 2022
- Added SQL2019-Setup.md, PRODUCTION-DEPLOYMENT.md, DATABASE-STATUS.md, QUICK-REFERENCE.md

--- a/src/NBT.WebAPI/appsettings.Development.json
+++ b/src/NBT.WebAPI/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NBTWebsite;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=04BF1B900A9D;Database=NBTWebsite_Dev;Integrated Security=true;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   }
 }
