--- a/src/NBT.WebUI/NBT.WebUI.csproj
+++ b/src/NBT.WebUI/NBT.WebUI.csproj
@@ -2,9 +2,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NBT.Application\NBT.Application.csproj" />
+    <ProjectReference Include="..\NBT.Infrastructure\NBT.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.1" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.1" />
   </ItemGroup>
