Implement Phase 6: JWT Authentication & Authorization
✅ Completed Tasks:
- JWT token generation and validation
- Login/logout functionality
- User registration
- Password change and reset flow
- Role-based authorization support
- Refresh token mechanism
- Protected API endpoints

📦 NuGet Packages Added:
- Microsoft.AspNetCore.Authentication.JwtBearer 8.0.0
- System.IdentityModel.Tokens.Jwt 8.0.0
- Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore 8.0.0

🔧 New Components:
- Application Layer:
  * LoginRequest, LoginResponse, RegisterRequest, RefreshTokenRequest DTOs
  * IJwtTokenService, IAuthenticationService interfaces

- Infrastructure Layer:
  * JwtTokenService - Token generation and validation
  * AuthenticationService - Complete auth workflow

- WebAPI:
  * AuthController with 7 endpoints (login, register, refresh, logout, change password, forgot/reset password)
  * JWT authentication middleware configured

- Database:
  * Added RefreshToken and RefreshTokenExpiry to User entity
  * Added InstitutionName to User entity
  * Migration: AddRefreshTokenToUser

⚙️ Configuration:
- JWT settings in appsettings.json (SecretKey, Issuer, Audience, Expiration)
- JWT Bearer authentication configured in Program.cs
- Services registered in DependencyInjection

🔒 Security Features:
- Password hashing via Identity
- Account lockout after 5 failed attempts
- Refresh token with 7-day expiration
- Password reset token generation
- Role-based authorization ready

Phase 6: 100% Complete

--- a/src/NBT.WebAPI/appsettings.json
+++ b/src/NBT.WebAPI/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=YOUR_PRODUCTION_SERVER;Database=NBTWebsite;User Id=YOUR_USERNAME;Password=YOUR_PASSWORD;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=True"
   },
+  "Jwt": {
+    "SecretKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!ChangeThisInProduction!",
+    "Issuer": "NBTWebsite",
+    "Audience": "NBTWebsiteUsers",
+    "TokenExpirationMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
