Complete MudBlazor to FluentUI migration and add GitHub workflow automation

--- a/src/NBT.WebAPI/appsettings.json
+++ b/src/NBT.WebAPI/appsettings.json
@@ -8,6 +8,12 @@
     "Audience": "NBTWebsiteUsers",
     "TokenExpirationMinutes": 60
   },
+  "Payment": {
+    "TestFee": "280.00",
+    "EasyPayUrl": "https://www.easypay.co.za/pay",
+    "MerchantId": "NBTTEST",
+    "MerchantKey": "YOUR_MERCHANT_KEY"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
