--- a/src/NBT.WebUI/NBT.WebUI.csproj
+++ b/src/NBT.WebUI/NBT.WebUI.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NBT.Application\NBT.Application.csproj" />
+  </ItemGroup>
+
 </Project>
